# C--Compiler

./: Makefile  Readme.md  build.bat  c--文法.md  run.bat  快速开始.md  新增测试用例说明.md  编译器前端快捷指令.txt
Syntax/: GrammarAnalyzer.cpp  IRGenerator.h  Parser.cpp  Parser.h  ReductionSequenceLogger.cpp  ReductionSequenceLogger.h  SLRTable.cpp  SyntaxTree.h  main.cpp
Syntax/output/: 0out.txt  1.ll  1out.txt  2.ll  2out.txt  3out.txt  4out.txt  5out.txt  6out.txt  7out.txt  8out.txt  comparison_report.md  syntax0.txt  syntax1.txt  syntax2.txt  syntax3.txt  syntax4.txt  syntax5.txt  syntax6.txt  syntax7.txt  syntax8.txt  test4.txt  tree1.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt  tree6.txt  tree7.txt  tree8.txt
blog/: blog.md
complie_ir/include/: BasicBlock.h  Constant.h  IRGenerator.h  IRbuilder.h  IRprinter.h  Instruction.h  Module.h
complie_ir/output/: 1.ll  1out.txt  2.ll  2out.txt  3.ll  3out.txt  4.ll  4out.txt  5.ll  5out.txt  6.ll  6out.txt  7.ll  7out.txt  8.ll  8out.txt  debug4.txt
complie_ir/src/: BasicBlock.cpp  Constant.cpp  Function.cpp  IRGenerator.cpp  IRmain.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp
docs/: finaltask.md  questions.md  中间代码最终版.md  第2组-实现文档.docx
grammer/: GrammarAnalyzer.cpp  GrammarAnalyzer.h  Parser.cpp  Parser.h  SLRTable.cpp  SLRTable.h  SyntaxTree.h  main.cpp
lex/: Lex_Analysis.cpp
lex/test/: test0.sy  (+7 more)
vison1/: CHECKLIST.md  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  IMPLEMENTATION.md  Parser.cpp  Parser.h  QUICKSTART.md  README.md  SUMMARY.md  SimpleParser.cpp  SimpleParser.h  build.bat  main.cpp  test_compiler.sh
(+10 files in other folders)
